--- a/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
+++ b/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
@@ -4,5 +4,9 @@
         <file>textureSampler2D.fsh</file>
         <file>vertexTextureMatrix.vsh</file>
         <file>textureSampler2D_YUV.fsh</file>
+        <file>picture/fileopen.png</file>
+        <file>picture/pause.png</file>
+        <file>picture/playhoverpressed.png</file>
+        <file>picture/playnormal.png</file>
     </qresource>
 </RCC>
