调整控件格式，更新qss样式表。 qss样式表中可设置QPushButton大小，QSlider控件设置了XYZ三种风格。

--- a/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
+++ b/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
@@ -8,5 +8,6 @@
         <file>picture/pause.png</file>
         <file>picture/playhoverpressed.png</file>
         <file>picture/playnormal.png</file>
+        <file>picture/background-boxboy.jpg</file>
     </qresource>
 </RCC>
