--- a/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
+++ b/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
@@ -9,5 +9,9 @@
         <file>picture/playhoverpressed.png</file>
         <file>picture/playnormal.png</file>
         <file>picture/background-boxboy.jpg</file>
+        <file>picture/cube.png</file>
+        <file>picture/ring.png</file>
+        <file>picture/plane.png</file>
+        <file>picture/splitwindow.png</file>
     </qresource>
 </RCC>
