OpenGLWidget控件中捕获鼠标事件，动态隐藏显示控制面板。

--- a/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
+++ b/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
@@ -13,5 +13,8 @@
         <file>picture/ring.png</file>
         <file>picture/plane.png</file>
         <file>picture/splitwindow.png</file>
+        <file>picture/addfile.png</file>
+        <file>picture/settings.png</file>
+        <file>picture/add.png</file>
     </qresource>
 </RCC>
