增加音量控件，实现音视频音量调节功能。

--- a/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
+++ b/MyPlay-FFMpeg-OpenGLWidget/resource.qrc
@@ -16,5 +16,7 @@
         <file>picture/addfile.png</file>
         <file>picture/settings.png</file>
         <file>picture/add.png</file>
+        <file>picture/voice.png</file>
+        <file>picture/voice-hover.png</file>
     </qresource>
 </RCC>
